--- a/future_work.tex
+++ b/future_work.tex
@@ -1,7 +1,9 @@
-\section{Summary \& Future Work}
-\subsection{Implementation}
-An implementation of the postprocessing approach for maximal planar graphs would be of interest in order to further analyze the behaviour of the edge-length ratio and have a look at the readability of the poly-line drawings with a minimized ratio.
-\subsection{New drawing algorithm}
-While this report covers approaches which alters either preexisting drawings or drawing algorithms, it would be of interest to create a new drawing algorithm. The input would be a planar graph described as an adjacence list and the output would be an embedding so that a drawing can be derived with a guaranteed ratio upper bound better than $\mathcal{O}(n)$.
+\section{Future Work}
+\subsection{Tweaking the postprocessing algorithm}
+A refinement of $n^2$ and using $\frac{n}{2}$ line segments as long as possible successfully overcomes the hurdle of leveling the edge lengths. But, as seen in the example in Section \ref{section:max_planar_example}, the lengths of the elongated edges might get longer than the original longest edge. The trend is that almost all edges will be longer than the longest edge. This is not desirable, since this worsens the ratio again by re-allocating the longest edge of the modified drawing. So, the question is how to adjust to the original longest edge without getting longer. Either, by not using the longest possible line segment insertions by default, or by using less bends in total. Maybe, a refinement by $o(n^2)$ suffices, for example a refinement by $n$ or $n\log n$. It does prove that the area suffices for every edge to be elongated in and shows a first approach. But, considering the trend of getting the edges too long, the postprocessing algorithm presented in this report is not applicable in this state.
 \subsection{Further minimizations}
-We observed that a linear amount of bends is mandatory for the edge-length ratio to be bound by a constant. It would be of interest to further minimize either the number of bends without losing any upper bounds or the area the whole drawing takes place in. When observing the result of the 2-trees, a similar ratio upper bound might be achieved with less area used than $\mathcal{O}(n^6)$.
+We observed that a linear amount of bends is mandatory for the edge-length ratio to be bound by a constant. It would be of interest to further minimize either the number of bends without losing any upper bounds or the area the whole drawing takes place in. This would be achieved by further investigating and gauging the postprocessing algorithm. 
+\subsection{New drawing algorithm approach} 
+Take a look at the certain 3-tree family presented in Section \ref{section:3-tree-family}. On one hand, the postprocessing algorithm proved that a refinement of at least $n$ and zig-zag elongations result in a constant ratio. But, this family of 3-trees (maximal planar) are drawable with a constant ratio and still remain in area $\mathcal{O}(n^2)$. This exclusive nestedness of this graph family might give a hint that a certain property of graphs determine the upper bound for the area while guaranteeing a constant ratio. This might be something interesting to further investigate.
+\subsection{Implementation}
+When the postprocessing algorithm is remastered, an implementation of this algorithm will be of interest. The readability of a drawing will suffice with a high amount of zig-zag elongations. But, when the number of bends or the length of the inserted line segments is minimized further, the readability will be an aspect of interest when the implementation is there.
