--- a/main.tex
+++ b/main.tex
@@ -102,5 +102,5 @@
 \include{2-trees.tex}
 \include{other_results.tex}
 \include{future_work}
-%\printbibliography
+\printbibliography
 \end{document}
