--- a/The_problem.tex
+++ b/The_problem.tex
@@ -28,6 +28,22 @@ This automatically gives an upper bound for any poly-line drawing $\Omega_G$ sin
 \subsubsection{A small example - a triangle}
 This example will illustrate the issue of finding a drawing with an optimal edge-length ratio. Consider $K_3$, the complete graph with three vertices. $K_3$ has got one outerface and one inner face, in shape of a triangle. In order to find a drawing of $K_3$ with an optimal ratio, we will see that one bend per edge is mandatory.\\
 A triangle with straight-lines as edges with length $l$ will have a height of $\frac{\sqrt{3}}{2}l$ in order to be optimal regarding the ratio. Unfortunately, $\sqrt{3}$ is not a rational number. There do not exist two integers in order to express $\sqrt{3}$ as a fraction. As a consequence, there does not exist any combination of coordinates on a grid in order to draw the $K_3$ without any bends and an optimal ratio.
-\TODO{Figure}
-But, when introducing one bend per edge, there exists a drawing with an optimal ratio, as seen in figure \TODO{Figure and cite}
-So, allowing bends will help minimizing the ratio of a drawing. 
+	\begin{figure}[H]
+	\centering
+	\begin{subfigure}{0.6\linewidth}
+		\centering
+		\includegraphics[width=0.7\textwidth,page=1]{drawings/small_example.pdf}
+	\end{subfigure}
+	\caption{There is no grid point for an optimal drawing without any bends}
+\end{figure}
+
+But, when introducing one bend per edge, there exists a drawing with an optimal ratio. 
+\begin{figure}[H]
+	\centering
+	\begin{subfigure}{0.6\linewidth}
+		\centering
+		\includegraphics[width=0.7\textwidth,page=2]{drawings/small_example.pdf}
+	\end{subfigure}
+	\caption{With one bend, $K_3$ admits an optimal drawing}
+\end{figure}
+Allowing bends will help minimizing the ratio of a drawing. 
