Finalized written report "Minimizing the edge length ratio of planar poly-line graph drawings"

--- a/main.tex
+++ b/main.tex
@@ -95,6 +95,7 @@
 
 \begin{document}
 \include{title.tex}
+\tableofcontents
 \include{intro.tex}
 \include{preliminaries.tex}
 \include{The_problem}
